download cv working fix

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                   create and design website with dominating technology.
                 </p>
                 <a
-                  href="/resource/Murtaza-resume.pdf"
+                  href="/resource/Murtaza.pdf"
                   download="murtaza-cv"
                   class="btn"
                   >Download CV</a
